--- a/devfile.yaml
+++ b/devfile.yaml
@@ -30,7 +30,32 @@ components:
       deployment/memoryRequest: 10Mi
       deployment/container-port: 8081
     kubernetes:
-      uri: outerloop-deploy.yaml
+      inlined: |
+        kind: Deployment
+        apiVersion: apps/v1
+        metadata:
+          name: my-go
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app: go-app
+          template:
+            metadata:
+              labels:
+                app: go-app
+            spec:
+              containers:
+                - name: my-go
+                  image: go-image:latest
+                  ports:
+                    - name: http
+                      containerPort: 8081
+                      protocol: TCP
+                  resources:
+                    limits:
+                      memory: "1024Mi"
+                      cpu: "500m"
 commands:
   - id: build-image
     apply:
